# pyproject.toml file for pywbemtools
# Documentation:
# pyproject.toml: https://packaging.python.org/en/latest/guides/writing-pyproject-toml/
# setuptools items: https://setuptools.pypa.io/en/latest/userguide/pyproject_config.html

[build-system]
requires = [
    "setuptools>=70.0.0",
    "setuptools-scm>=9.2.0",
    "wheel>=0.38.1",
]
build-backend = "setuptools.build_meta"

[tool.setuptools]
platforms = ["any"]
zip-safe = true

[tool.setuptools.packages.find]
# setuptools needs all sub-packages to be specified as well to avoid the
# ambiguity warning. That can be done by specifyng 'packages' with a full list
# of packages including sub-packages, or by specifying 'packages.find' with
# wildcards. The strings in 'packages.find' are matched using glob pattern
# matching against the package path.
include = ["pywbemtools", "pywbemtools.*"]

[project]
name = "pywbemtools"
description = "Python client tools to work with WBEM Servers using the PyWBEM API"
authors = [
    {name = "Andreas Maier", email = "maiera@de.ibm.com"},
    {name = "Karl Schopmeyer", email = "k.schopmeyer@swbell.net"}
]
maintainers = [
    {name = "Andreas Maier", email = "maiera@de.ibm.com"},
    {name = "Karl Schopmeyer", email = "k.schopmeyer@swbell.net"}
]
readme = "README_PYPI.md"
license = {text = "Apache License, Version 2.0"}
keywords = ["cim", "wbem", "client"]
classifiers = [
    "License :: OSI Approved :: Apache Software License",
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    'Intended Audience :: Information Technology',
    "Topic :: System :: Systems Administration",
    "Environment :: Console",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]
requires-python = ">=3.8"
dynamic = ["version", "dependencies"]

[project.scripts]
pywbemcli = "pywbemtools.pywbemcli.pywbemcli:cli"
pywbemlistener = "pywbemtools.pywbemlistener.pywbemlistener:cli"

[project.urls]
Homepage = "https://github.com/pywbem/pywbemtools"
"Bug Tracker" = "https://github.com/pywbem/pywbemtools/issues"
Documentation = "https://pywbemtools.readthedocs.io/en/latest/"
"Source Code" = "https://github.com/pywbem/pywbemtools"
Changelog = "https://pywbemtools.readthedocs.io/en/latest/changes.html"

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}

[tool.setuptools_scm]
# Get the version from the Git tag, and write a version file:
version_file = "pywbemtools/_version_scm.py"
