
[metadata]
name = pywbemtools
summary = Python client tools to work with WBEM Servers using the PyWBEM API.
description-file =
    README.md
license = Apache License, Version 2.0
author = Karl Schopmeyer, Andreas Maier
author-email = k.schopmeyer@swbell.net, maiera@de.ibm.com
maintainer = Karl Schopmeyer, Andreas Maier
maintainer-email = k.schopmeyer@swbell.net, maiera@de.ibm.com
home-page = https://github.com/pywbem/pywbemcli
classifier =
    Development Status :: 3 - Alpha
    Environment :: Console
    Intended Audience :: Developers
    Intended Audience :: Information Technology
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.4
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6

[files]
packages =
    pywbemcli

[entry_points]
console_scripts =
    pywbemcli = pywbemcli.pywbemcli:cli

[wheel]
universal = 1

[pbr]
warnerrors = true

[flake8]
ignore =
    # unable to detect undefined names (when using wildcard import)
    F403
exclude =
    .git,
    .tox,
    __pycache__,
    *.pyc,
    docs/conf.py,
    build_doc,
    dist
