#
# (C) Copyright 2019 IBM Corp.
# (C) Copyright 2019 Inova Development Inc.
# All Rights Reserved
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#    http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
#

[metadata]
name = pywbemtools
summary = Python client tools to work with WBEM Servers using the PyWBEM API.
description-file =  README_PYPI.rst
license = Apache License, Version 2.0
author = Karl Schopmeyer, Andreas Maier
author-email = k.schopmeyer@swbell.net, maiera@de.ibm.com
maintainer = Karl Schopmeyer, Andreas Maier
maintainer-email = k.schopmeyer@swbell.net, maiera@de.ibm.com
home-page = https://github.com/pywbem/pywbemtools
project_urls =
    Bug Tracker = https://github.com/pywbem/pywbemtools/issues
    Documentation = https://pywbemtools.readthedocs.io/en/latest/
    Source Code = https://github.com/pywbem/pywbemtools
python_requires = '>=2.7, !=3.0.*, !=3.1.*, !=3.2.*, !=3.3.*'
classifier =
    Development Status :: 3 - Alpha
    Environment :: Console
    Intended Audience :: Developers
    Intended Audience :: Information Technology
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.4
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8

[files]
packages =
    pywbemtools

[entry_points]
console_scripts =
    pywbemcli = pywbemtools.pywbemcli.pywbemcli:cli

[wheel]
universal = 1

[pbr]
warnerrors = true

# flake8 config is in .flake8 file
